Tempo infinito resolvido e suporte ao usuario adicionado

--- a/index.html
+++ b/index.html
@@ -12,12 +12,13 @@
       <div class="cronometro">
         
         <div class="tempo">
-          <h1 style="color: white;" >Pomodoro</h1>
+          <h1 style="color: white;" id="titulo">Pomodoro</h1>
           <span id="minutos">25 :  </span>
           <span id="segundos">00</span>
         </div>
         <a onclick="iniciarCronometro()" id="iniciar">Iniciar</a>
         <a onclick="pararCronometro()" id="parar">Parar</a>
+        <p style="color: white; margin-top: 30px;">Problemas com o app? <a style="color: rgb(167, 167, 250);" href="https://wa.link/gcces8">Contate-me</a></p>
       </div>
     </div>
 
