bug de button resolvidos

--- a/index.html
+++ b/index.html
@@ -16,8 +16,8 @@
           <span id="minutos">25 :  </span>
           <span id="segundos">00</span>
         </div>
-        <a onclick="iniciarCronometro()" id="iniciar">Iniciar</a>
-        <a onclick="pararCronometro()" id="parar">Parar</a>
+        <button onclick="iniciarCronometro()" id="iniciar">Iniciar</button>
+        <button onclick="pararCronometro()" id="parar">Parar</button>
         <p style="color: white; margin-top: 30px;">Problemas com o app? <a style="color: rgb(167, 167, 250);" href="https://wa.link/gcces8">Contate-me</a></p>
       </div>
     </div>
