melhorias de interatividade
o button iniciar estava com um bug de contagem infinita caso clicasse inumeras vezes. Resolvido.  E tambem a contagem de tempo tambem foi melhorada.

--- a/index.html
+++ b/index.html
@@ -17,6 +17,7 @@
           <span id="segundos">00</span>
         </div>
         <button onclick="iniciarCronometro()" id="iniciar">Iniciar</button>
+        <button id="iniciarDisabled">Iniciar</button>
         <button onclick="pararCronometro()" id="parar">Parar</button>
         <p style="color: white; margin-top: 30px;">Problemas com o app? <a style="color: rgb(167, 167, 250);" href="https://wa.link/gcces8">Contate-me</a></p>
       </div>
