design refeito novas funcionalidades

--- a/index.html
+++ b/index.html
@@ -1,27 +1,30 @@
 <!DOCTYPE html>
 <html lang="pt-br">
-<head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <link rel="stylesheet" href="style.css">
-  <title>cronometro</title>
-</head>
-  <body>
-    
-    <div class="relogio">
-      <div class="cronometro">
-        
-        <div class="tempo">
-          <h1 style="color: white;" id="titulo">Pomodoro</h1>
-          <span id="minutos">25 :  </span>
-          <span id="segundos">00</span>
-        </div>
-        <button onclick="iniciarCronometro()" id="iniciar">Iniciar</button>
-        <button onclick="pararCronometro()" id="parar">Parar</button>
-        <p style="color: white; margin-top: 30px;">Problemas com o app? <a style="color: rgb(167, 167, 250);" href="https://wa.link/gcces8">Contate-me</a></p>
-      </div>
-    </div>
-
-    <script src="app.js"></script>
-  </body>
+	<head>
+		<meta charset="UTF-8">
+		<meta name="viewport" content="width=device-width, initial-scale=1.0">
+		<link rel="stylesheet" href="style.css">
+		<link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.3/font/bootstrap-icons.min.css">
+		<script src="/app.js" defer></script>
+		<title>Cronometro</title>
+	</head>
+	<body>
+		<nav>
+			<ul>
+				<li>pomodoro</li>
+				<li id="suporte" onclick="suporte()"><i class="bi bi-info-circle-fill"></i>   Suporte</li>
+			</ul>
+		</nav>
+		<header>
+			<div class="cronometro">
+				<span class="tempo" id="minutos">00 : </span>
+				<span id="segundos">00</span>
+			</div>
+			<div class="botao">
+				<button id="iniciar" onclick="iniciarCronometro()">iniciar</button>
+				<button id="pausar" onclick="pausarCronometro()">Pausar</button>
+				<button id="parar" onclick="pararCronometro()">resetar</button>
+			</div>
+		</header>
+	</body>
 </html>
